# systemic_insurance_risk_fl_pub

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml
docs/: EMANUEL_MC_QUICKSTART.md  METHODS_CLIMATE_PROJECTIONS.md  METHODS_POLICY_SCENARIOS.md
fl_risk_model/: capital.py  catbonds.py  config.py  exposure.py  fhcf.py  loader.py  mc_run_events.py  nfip.py  runner.py  utils.py
fl_risk_model/branches/: citizens.py  flood.py  uninsured.py  wind.py
fl_risk_model/data/: 20250805 FL Surplus Capital, Group v Entity.xlsx  24fin_fhcf.csv  CAPRA_TO_BEM_TC_WIND_IMPACT_FUNCTIONS.csv  FHCF_2024_Exposure_byCounty.xlsx  FL HO Market Share Report_6.10.25.xlsx  NfipResidentialPenetrationRates.csv  all_events.csv  catbonds_2024.csv  citizens_capital_pml.csv  citizens_county_data.csv  citizens_county_data_all_harmonized.csv  company_keys.csv  county_region.csv  fhcf_terms_keyed.csv  fl_county_fips.csv  florida_coastal_counties.csv  florida_comparative_wind_water_p95.csv  florida_empirical_climate_change_comparison_p95.csv  florida_empirical_future_scaling_p95.csv  florida_empirical_hazard_attribution_p95.csv  florida_future_damage_scaling_factors.csv  florida_linear_damage_scaling_factors.csv  florida_log_contribution_full_present.csv  florida_log_contribution_p95_future.csv  florida_log_contribution_p95_present.csv  florida_physics_based_p95_OBSOLETE.csv  florida_stochastic_damage_scaling_factors.csv  florida_stochastic_damage_scaling_factors_conservative.csv  nfip_FL_claims_by_year.csv  nfip_FL_coverage_premium_by_year.csv
fl_risk_model/loss_calc_utils/: evaluate_losses.py  impfunc_utils.py
fl_risk_model/scenarios/: __init__.py  building_codes.py  market_exit.py  penetration.py
notebooks/: climate_buildingcode_windfloods_analysis.ipynb  emanuel_tc_policy_analysis.ipynb  historical_scenario_analysis.ipynb  hurricane_loss_maps.ipynb  policy_scenario_analysis.ipynb  probabilistic_risk_analysis.ipynb
scripts/analysis/: analyze_emanuel_comprehensive.py  analyze_penetration_capital_sensitivity.py  build_scenario_report_with_uncertainty.py  combine_probabilistic_tables.py  combine_systemic_risk_tables.py  (+2 more)
(+4142 files in other folders)
